@@ -6,6 +6,7 @@ class Net::SSLeay::X509 {
   
   use Net::SSLeay::Error;
   use Net::SSLeay::X509_NAME;
+  use Net::SSLeay::EVP_MD;
   
   use Fn;
   
@@ -23,6 +24,8 @@ class Net::SSLeay::X509 {
   native method get_issuer_name : Net::SSLeay::X509_NAME ();
   
   native method get_subject_name : Net::SSLeay::X509_NAME ();
+  
+  native method digest : int ($type : Net::SSLeay::EVP_MD, $md : mutable string, $len_ref : int*);
   
   native method DESTROY : void ();
   
